Added 2 modules: Default & Book Module

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,9 @@ ktor {
         port = 8080
     }
     application {
-        modules = [ com.learning.ApplicationKt.module ]
+        modules = [
+            com.learning.ApplicationKt.module,
+            com.learning.ApplicationKt.moduleBook
+         ]
     }
 }
